<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EasyChat</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="prompt">提示</string>
    <string name="delete">删除</string>
    <string name="complete">完成</string>
    <string name="mute">静音</string>
    <string name="search">搜索</string>
    <string name="commit">提交</string>
    <string name="follow">关注</string>
    <string name="nickname">昵称</string>
    <string name="red_pack">红包</string>
    <string name="person_str">人</string>
    <string name="unit_person">%1$s人</string>

    <string name="loading_data">正在加载数据…</string>
    <string name="no_more_data">没有更多</string>
    <string name="msg_error">出错了!</string>
    <string name="empty_title">暂无数据</string>
    <string name="empty_no_data_title">空空如也，啥也木有</string>
    <string name="text_nearby_open_location_bt">开启定位</string>
    <string name="msg_network_bad_check_click_retry">网络不给力\n请点击重新加载</string>

    <string name="group_number">群号</string>
    <string name="group_name">群名</string>
    <string name="group_owner">群主</string>
    <string name="group_member">群成员</string>
    <string name="group_red_pack">群组红包</string>
    <string name="personal_red_pack">个人红包</string>

    <string name="at_me_message">了我</string>
    <string name="at_all_message">所有人</string>
    <string name="at_message">有人</string>
    <string name="create_group_chat">发起群聊</string>
    <string name="message_my_group">我的群组</string>
    <string name="create_group">建群</string>
    <string name="create_group_loading">创建中</string>
    <string name="create_group_failed">创建失败</string>
    <string name="message_not_bother">屏弊群消息</string>
    <string name="report_this_group">举报该群组</string>
    <string name="clean_chat_history">清空聊天记录</string>
    <string name="dissolution_group">解散该群</string>
    <string name="quit_group">退出该群</string>
    <string name="not_setting_group_name">未设置</string>
    <string name="modify_group_name">修改群名</string>
    <string name="group_name_not_null">群组名不能为空！</string>
    <string name="dissolute_group_complete">解散成功</string>
    <string name="quit_group_complete">退群成功</string>
    <string name="add_group_member">添加成员</string>
    <string name="remove_group_member">移除成员</string>
    <string name="add_group_member_menu">添加</string>
    <string name="remove_group_member_menu">移除</string>
    <string name="remove_group_member_number">移除(%1$d)</string>
    <string name="select_member_number">完成(%1$d)</string>
    <string name="group_topic">群里的小伙伴在呼唤你~</string>
    <string name="invite_join_group_chat">邀请你加入了群组</string>
    <string name="select_the_group">选择一个群</string>
    <string name="msg_clean_chat_history_success">清空聊天记录成功</string>
    <string name="group_announcement">群公告</string>

    <string name="msg_follow_success">关注成功</string>
    <string name="msg_unfollow_success">取消关注成功</string>
    <string name="msg_network_bad_check_retry">网络异常，请检查网络后重试</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="msg_chat_im_user_null">私信异常</string>
    <string name="message_followed_you">已经关注了你</string>
    <string name="title_un_follow_friend">+关注</string>
    <string name="tab_title_message">消息</string>
    <string name="submit_ok">您的反馈已收到，感谢您的支持，我们会尽快解决您的问题！</string>
    <string name="red_pack_type_system">易视云红包</string>
    <string name="chat_select_forward_user">选择聊天对象</string>
    <string name="chat_to_new_user">发起新的聊天</string>
    <string name="chat_recently_user">最近聊天</string>
    <string name="red_pack_tag">当前版本不支持查看此消息，请更新版本查看。</string>
    <string name="you_are_group">你被群创建者从此群中移除</string>
    <string name="the_current_group">当前群聊已被群创建者解散</string>

    <!-- Chat related string -->
    <string name="Send_the_following_pictures">发送以下图片？</string>
    <string name="Making_sure_your_location">正在确定你的位置...</string>
    <string name="please_check">key 验证出错! 请在 AndroidManifest.xml 文件中检查 key 设置</string>
    <string name="Network_error">网络出错</string>
    <string name="location_message">位置信息</string>
    <string name="button_send">发送</string>
    <string name="no_more_messages">没有更多的消息了</string>
    <string name="sd_card_does_not_exist">SD卡不存在，不能拍照</string>
    <string name="Whether_to_empty_all_chats">是否清空所有聊天记录</string>
    <string name="Send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="Recording_without_permission">无录音权限</string>
    <string name="The_recording_time_is_too_short">录音时间太短</string>
    <string name="send_failure_please">发送失败，请检测服务器是否连接</string>
    <string name="moving_into_blacklist">正在移入黑名单...</string>
    <string name="moving_from_blacklist">正在移出黑名单...</string>
    <string name="chat_location_recv">[位置]</string>
    <string name="chat_location_prefix">[我的位置]</string>
    <string name="chat_picture">[图片]</string>
    <string name="chat_living">[直播]</string>
    <string name="chat_voice_call">[语音通话]</string>
    <string name="chat_file">[文件]</string>
    <string name="chat_voice">[语音]</string>
    <string name="chat_video">[视频]</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="resend">重发</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="connect_failed_toast">请检查网络或稍候重试</string>
    <string name="error_send_invalid_content">你发送了不合法的消息内容</string>
    <string name="error_send_not_in_the_group">你已经不在此群了</string>
    <string name="cant_find_pictures">找不到图片</string>
    <string name="call_duration">通话时长</string>
    <string name="Refused">已拒绝</string>
    <string name="The_other_party_has_refused_to">对方已拒绝</string>
    <string name="The_other_is_not_online">对方不在线</string>
    <string name="The_other_is_on_the_phone">对方正在通话中</string>
    <string name="The_other_party_did_not_answer">对方未接听</string>
    <string name="did_not_answer">未接听</string>
    <string name="Has_been_cancelled">已取消</string>
    <string name="search_header">搜</string>
    <string name="search_new">搜</string>
    <string name="download_waiting">正在下载文件请稍后</string>
    <string name="Failed_to_download_file">下载文件失败:</string>
    <string name="title_user_profile">资料</string>
    <string name="setting_nickname">设置昵称</string>
    <string name="toast_nick_not_isnull">昵称不能为空！</string>
    <string name="dl_title_upload_photo">上传头像</string>
    <string name="dl_msg_take_photo">拍照上传</string>
    <string name="dl_msg_local_upload">本地上传</string>
    <string name="toast_no_support">暂不支持！</string>
    <string name="dl_update_nick">更新昵称</string>
    <string name="dl_waiting">请等待...</string>
    <string name="toast_update_nickname_fail">更新昵称失败!</string>
    <string name="toast_update_nickname_success">更新昵称成功!</string>
    <string name="dl_update_photo">更新头像</string>
    <string name="toast_update_photo_success">更新头像成功!</string>
    <string name="toast_update_photo_fail">更新头像失败!</string>
    <string name="Hands_free">免提</string>
    <string name="hang_up">挂断</string>
    <string name="answer">接听</string>
    <string name="Are_connected_to_each_other">正在连接对方...</string>
    <string name="Is_not_yet_connected_to_the_server">尚未连接至服务器</string>
    <string name="have_connected_with">已经和对方建立连接，等待对方接受...</string>
    <string name="direct_call">Direct</string>
    <string name="relay_call">Relay</string>
    <string name="In_the_call">通话中...</string>
    <string name="The_other_party_refused_to_accept">对方拒绝接受！...</string>
    <string name="Connection_failure">连接建立失败！...</string>
    <string name="The_other_party_is_not_online">对方不在线，请稍后再拨...</string>
    <string name="The_other_is_on_the_phone_please">对方正在通话中，请稍后再拨</string>
    <string name="The_other_is_hang_up">对方已经挂断</string>
    <string name="hanging_up">正在挂断..</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_picture">图片</string>
    <string name="select_contacts">选择联系人</string>
    <string name="is_down_please_wait">正在下载视频请稍候</string>
    <string name="forward">转发</string>
    <string name="delete_message">删除</string>
    <string name="copy_message">复制</string>
    <string name="delete_video">删除</string>
    <string name="delete_voice">删除</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="The_other_party_did_not_answer_new">对方未接听</string>
    <string name="Is_download_voice_click_later">正在下载语音，稍后点击</string>
    <string name="concerned_msg">关注后可订阅对方动态</string>

    <!--确定-->
    <string name="select_number_confirm">确定(%1$d)</string>
</resources>