<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/context_menu_item_height"
        android:layout_marginTop="1dp"
        android:background="@drawable/context_menu_item_bg"
        android:clickable="true"
        android:gravity="center"
        android:onClick="copy"
        android:padding="10dp"
        android:text="@string/copy_message"
        android:textColor="@color/text_common"
        android:textSize="@dimen/text_size_title_h2"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/delete_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/context_menu_item_height"
        android:background="@drawable/context_menu_item_bg"
        android:clickable="true"
        android:gravity="center"
        android:onClick="delete"
        android:padding="10dp"
        android:text="@string/delete_message"
        android:textColor="@color/text_common"
        android:textSize="@dimen/text_size_title_h2"/>
    <View
        android:id="@+id/delete_line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/context_menu_item_height"
        android:background="@drawable/context_menu_item_bg"
        android:clickable="true"
        android:gravity="center"
        android:onClick="forward"
        android:padding="10dp"
        android:text="@string/forward"
        android:textColor="@color/text_common"
        android:textSize="@dimen/text_size_title_h2"/>
</LinearLayout>
