<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="false"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:padding="5dp"
            android:text="@string/prompt"
            android:textColor="@color/text_common"
            android:visibility="visible"
            android:textSize="@dimen/text_size_title_h1" />

        <TextView
            android:id="@+id/alert_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="18dp"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:textColor="@color/text_common"
            android:textSize="@dimen/text_size_13" />

        <EditText
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:singleLine="true"
            android:textColor="#444"
            android:textSize="@dimen/text_size_13"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:scaleType="fitCenter"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
           android:layout_height="@dimen/button_common_height"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_cancel_bj"
            android:gravity="center"
            android:onClick="cancel"
            android:text="@string/cancel"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_size_13"
            android:visibility="gone" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_common_height"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_blue_selector"
            android:gravity="center"
            android:onClick="ok"
            android:text="@string/confirm"
            android:textColor="@color/text_white"
            android:textSize="@dimen/text_size_13" />
    </LinearLayout>

</LinearLayout>
