<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/common_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        layout="@layout/common_header_layout"/>
    <View
        android:id="@+id/common_shadow"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_shadow"
        android:background="@drawable/shape_toolbar_shadow" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="9dp"/>
            <ImageView
                style="@style/default_horizontal_line_style"/>
            <LinearLayout
                style="@style/item_my_setting">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_title_h2"
                    android:textColor="@color/text_black"
                    android:text="@string/group_number"/>
                <TextView
                    android:id="@+id/group_id_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_title_h2"
                    android:textColor="@color/color_main"
                    android:layout_marginLeft="20dp"/>
            </LinearLayout>
            <ImageView
                android:layout_marginLeft="18dp"
                style="@style/default_horizontal_line_style"/>
            <LinearLayout
                android:id="@+id/group_name_ll"
                style="@style/item_my_setting">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_title_h2"
                    android:textColor="@color/text_black"
                    android:text="@string/group_name"/>
                <TextView
                    android:id="@+id/group_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_title_h2"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:textColor="@color/color_main"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:id="@+id/group_name_change_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:textSize="@dimen/text_size_title_h2"
                    android:textColor="@color/color_main"
                    android:drawableRight="@drawable/ic_arrow_right_personal_more"
                    android:drawablePadding="3dp"
                    android:gravity="right"/>
            </LinearLayout>

            <ImageView
                style="@style/default_horizontal_line_style"
                android:visibility="gone"
                android:layout_marginLeft="18dp"/>
            <RelativeLayout
                android:id="@+id/group_announcement_rl"
                android:visibility="gone"
                style="@style/item_my_setting">
                <TextView
                    android:id="@+id/group_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_title_h2"
                    android:layout_centerVertical="true"
                    android:textColor="@color/text_black"
                    android:text="@string/group_announcement"/>
                <TextView
                    android:id="@+id/group_announcement_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_title_h2"
                    android:textColor="@color/text_common_alpha_60"
                    android:layout_below="@id/group_title_tv"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:visibility="gone"
                    android:layout_alignLeft="@id/group_title_tv"
                    android:layout_toLeftOf="@+id/group_announcement_go_iv"/>
                <ImageView
                    android:id="@+id/group_announcement_go_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:visibility="gone"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_arrow_right_personal_more"/>
            </RelativeLayout>
            <ImageView
                style="@style/default_horizontal_line_style"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <ImageView
                style="@style/default_horizontal_line_style"/>
            <LinearLayout style="@style/item_my_setting">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_title_h2"
                    android:textColor="@color/text_black"
                    android:text="@string/group_owner"/>
                <com.easyvaas.common.widget.MyUserPhoto
                    android:id="@+id/group_owner_photo"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:scaleType="fitCenter"
                    app:src="@drawable/somebody"
                    app:is_vip="no_vip"
                    app:small_height="8dp"
                    app:small_width="8dp"
                    app:border_color="@color/round_border"
                    app:border_width="@dimen/avatar_border_width"
                    android:layout_marginLeft="20dp"/>
            </LinearLayout>
            <ImageView
                android:layout_marginLeft="18dp"
                style="@style/default_horizontal_line_style"/>
            <LinearLayout
                android:id="@+id/group_number_ll"
                style="@style/item_my_setting">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_title_h2"
                    android:textColor="@color/text_black"
                    android:text="@string/group_member"/>
                <TextView
                    android:id="@+id/group_member_number_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_title_h2"
                    android:textColor="@color/color_main"
                    android:drawableRight="@drawable/ic_arrow_right_personal_more"
                    android:drawablePadding="3dp"
                    android:gravity="right"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/list_item_video_limit_height"
                android:background="@drawable/list_item_selector"
                android:paddingLeft="28dp"
                android:gravity="center">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/group_member_photo_rl"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:animationCache="false"
                    android:layout_toLeftOf="@+id/select_friends_option_ll"/>
                <LinearLayout
                    android:id="@+id/select_friends_option_ll"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="28dp"
                    android:gravity="center_vertical">
                    <ImageView
                        android:id="@+id/add_member_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/group_info_add_member"/>
                    <ImageView
                        android:id="@+id/sub_member_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/group_info_delete_member"/>
                </LinearLayout>
            </RelativeLayout>
            <ImageView
                style="@style/default_horizontal_line_style"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="9dp"/>
            <ImageView
                style="@style/default_horizontal_line_style"/>
            <RelativeLayout
                android:id="@+id/group_set_notify_rl"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:background="@drawable/list_item_selector"
                android:paddingLeft="28dp"
                android:paddingRight="28dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_title_h2"
                    android:layout_centerVertical="true"
                    android:textColor="@color/text_black"
                    android:text="@string/message_not_bother"/>
                <CheckBox
                    android:id="@+id/msg_not_bother_cb"
                    style="@style/group_toggle_button"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:checked="true"/>
            </RelativeLayout>
            <ImageView
                android:layout_marginLeft="18dp"
                style="@style/default_horizontal_line_style"/>
            <LinearLayout
                android:id="@+id/group_clean_history_ll"
                style="@style/item_my_setting">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_title_h2"
                    android:textColor="@color/text_black"
                    android:text="@string/clean_chat_history"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_title_h2"
                    android:textColor="@color/color_main"
                    android:drawableRight="@drawable/ic_arrow_right_personal_more"
                    android:drawablePadding="3dp"
                    android:gravity="right"/>
            </LinearLayout>
            <ImageView
                android:layout_marginLeft="18dp"
                android:visibility="gone"
                style="@style/default_horizontal_line_style"/>
            <LinearLayout
                android:id="@+id/report_group_ll"
                android:visibility="gone"
                style="@style/item_my_setting">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_title_h2"
                    android:textColor="@color/text_black"
                    android:text="@string/report_this_group"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_title_h2"
                    android:textColor="@color/color_main"
                    android:drawableRight="@drawable/ic_arrow_right_personal_more"
                    android:drawablePadding="3dp"
                    android:gravity="right"/>
            </LinearLayout>
            <ImageView
                style="@style/default_horizontal_line_style"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="9dp"/>

            <TextView
                android:id="@+id/dissolution_group_tv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_common_height"
                android:layout_margin="10dp"
                android:textSize="@dimen/text_size_title_h2"
                android:gravity="center"
                android:text="@string/dissolution_group"
                android:background="@drawable/round_btn_selector"
                android:textColor="@color/text_btn_selector"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
